--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-range": "^1.8.11",
     "react-scripts": "4.0.3",
+    "react-tooltip": "^4.2.21",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
