--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,8 @@
 {
   "plugins": [
-    ["babel-plugin-root-import"]
+    ["babel-plugin-root-import",  {
+      "rootPathSuffix": "./src",
+      "rootPathPrefix": "~/"
+    }]
   ]
 }
