--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
+        "@types/jest": "^27.4.0",
+        "@types/node": "^17.0.18",
+        "@types/react": "^17.0.39",
+        "@types/react-dom": "^17.0.11",
         "antd": "^4.18.5",
         "babel-plugin-root-import": "^6.6.0",
         "eslint-plugin-react": "^7.28.0",
@@ -24,12 +28,13 @@
         "react-tooltip": "^4.2.21",
         "redux": "^4.1.2",
         "redux-devtools-extension": "^2.13.9",
+        "typescript": "^4.5.5",
         "web-vitals": "^1.0.1"
     },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test",
+        "test": "jest",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -49,5 +54,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "jest": "^27.5.1"
     }
 }
