Commit to save progress

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,5 @@
 {
+  "presets": [["@babel/preset-env", {"targets": {"node": "current"}}]],
   "plugins": [
     ["babel-plugin-root-import",  {
       "rootPathSuffix": "./src",
