--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
         "antd": "^4.18.8",
         "babel-plugin-root-import": "^6.6.0",
         "eslint-plugin-react": "^7.28.0",
+        "file-saver": "^2.0.5",
         "framer-motion": "6",
+        "jszip": "^3.7.1",
         "node-sass": "^7.0.1",
         "prettier": "2.5.1",
         "prismjs": "^1.27.0",
