--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@types/node": "^17.0.21",
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
+        "ace-builds": "^1.4.14",
         "antd": "^4.18.8",
         "babel-plugin-root-import": "^6.6.0",
         "eslint-plugin-react": "^7.28.0",
@@ -25,6 +26,7 @@
         "prettier": "2.5.1",
         "prismjs": "^1.27.0",
         "react": "^17.0.2",
+        "react-ace": "^9.5.0",
         "react-color": "^2.19.3",
         "react-color-gradient-picker": "^0.1.2",
         "react-dom": "^17.0.2",
