--- a/package.json
+++ b/package.json
@@ -6,47 +6,29 @@
         "@emotion/react": "11",
         "@emotion/styled": "11",
         "@mui/material": "^5.4.3",
-        "@popperjs/core": "^2.11.2",
         "@reduxjs/toolkit": "^1.7.2",
-        "@testing-library/jest-dom": "^5.16.2",
-        "@testing-library/react": "^12.1.3",
-        "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.4.1",
         "@types/node": "^17.0.21",
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
         "ace-builds": "^1.4.14",
         "antd": "^4.18.8",
-        "babel-plugin-root-import": "^6.6.0",
-        "eslint-plugin-react": "^7.28.0",
         "file-saver": "^2.0.5",
-        "framer-motion": "6",
         "is-var-name": "^2.0.0",
         "jszip": "^3.7.1",
         "node-sass": "^7.0.1",
         "prettier": "2.5.1",
-        "prismjs": "^1.27.0",
         "react": "^17.0.2",
         "react-ace": "^9.5.0",
-        "react-color": "^2.19.3",
         "react-color-gradient-picker": "^0.1.2",
         "react-dom": "^17.0.2",
         "react-feather": "^2.0.9",
-        "react-popper": "^2.2.5",
-        "react-range": "^1.8.12",
         "react-redux": "^7.2.6",
         "react-router": "^6.2.1",
         "react-router-dom": "^6.2.1",
         "react-scripts": "5",
-        "react-select": "^5.2.2",
-        "react-simple-code-editor": "^0.11.0",
-        "react-spring": "^9.4.3",
-        "react-tooltip": "^4.2.21",
         "redux": "^4.1.2",
         "redux-devtools-extension": "^2.13.9",
-        "ts-jest": "^27.1.3",
-        "typescript": "^4.5.5",
-        "web-vitals": "^2.1.4"
+        "typescript": "^4.5.5"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -77,7 +59,6 @@
     "devDependencies": {
         "@babel/core": "^7.17.5",
         "@babel/preset-env": "^7.16.11",
-        "babel-jest": "^27.5.1",
-        "jest": "^27.5.1"
+        "babel-jest": "^27.5.1"
     }
 }
