--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,10 @@
 {
-  "presets": [["@babel/preset-env", {"targets": {"node": "current"}}]]
+  "presets": [["@babel/preset-env", {"targets": {"node": "current"}}]],
+  "plugins":  [
+    ["babel-plugin-root-import", {
+    "rootPathSuffix": "./src",
+    "rootPathPrefix": "~/"
+  }]
+  ]
+
 }
