--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,3 @@
 {
-  "presets": [["@babel/preset-env", {"targets": {"node": "current"}}]],
-  "plugins":  [
-    ["babel-plugin-root-import", {
-    "rootPathSuffix": "./src",
-    "rootPathPrefix": "~/"
-  }]
-  ]
-
+    "presets": [["@babel/preset-env", { "targets": { "node": "current" } }]]
 }
