--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     },
     "devDependencies": {
         "@babel/core": "^7.17.5",
-        "@babel/preset-env": "^7.16.11",
-        "babel-plugin-root-import": "^6.6.0"
+        "@babel/preset-env": "^7.16.11"
     }
 }
