--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-      "jsx": "react",
-      "esModuleInterop": true 
+        "jsx": "react-jsx",
+        "esModuleInterop": true
     }
-  }
+}
