--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "crypto-game",
+    "name": "quickcomponent.io",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
