--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-dom": "^17.0.2",
         "react-feather": "^2.0.9",
         "react-redux": "^7.2.6",
+        "react-responsive": "^9.0.0-beta.6",
         "react-router": "^6.2.1",
         "react-router-dom": "^6.2.1",
         "react-scripts": "5",
