--- a/package.json
+++ b/package.json
@@ -27,11 +27,16 @@
         "react-router": "^6.2.1",
         "react-router-dom": "^6.2.1",
         "react-scripts": "5",
+        "react-select": "^5.3.2",
+        "react-switch": "^6.0.0",
         "redux": "^4.1.2",
         "redux-devtools-extension": "^2.13.9",
+        "source-map-explorer": "^2.5.2",
+        "styled-components": "^5.3.5",
         "typescript": "^4.5.5"
     },
     "scripts": {
+        "analyze": "source-map-explorer 'build/static/js/*.js'",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "eject": "react-scripts eject"
