--- a/package.json
+++ b/package.json
@@ -3,15 +3,12 @@
     "version": "1.0.0   ",
     "private": true,
     "dependencies": {
-        "@emotion/react": "11",
-        "@emotion/styled": "11",
         "@mui/material": "^5.4.3",
         "@reduxjs/toolkit": "^1.7.2",
         "@types/node": "^17.0.21",
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
         "ace-builds": "^1.4.14",
-        "antd": "^4.18.8",
         "file-saver": "^2.0.5",
         "is-var-name": "^2.0.0",
         "jszip": "^3.7.1",
@@ -19,7 +16,6 @@
         "prettier": "2.5.1",
         "react": "^17.0.2",
         "react-ace": "^9.5.0",
-        "react-color-gradient-picker": "^0.1.2",
         "react-dom": "^17.0.2",
         "react-feather": "^2.0.9",
         "react-redux": "^7.2.6",
@@ -29,6 +25,7 @@
         "react-scripts": "5",
         "redux": "^4.1.2",
         "redux-devtools-extension": "^2.13.9",
+        "styled-components": "^5.3.5",
         "typescript": "^4.5.5"
     },
     "scripts": {
