--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
     "name": "quickcomponent.io",
-    "version": "1.0.0   ",
+    "version": "1.0.1",
     "private": true,
     "dependencies": {
-        "@mui/material": "^5.4.3",
+        "@emotion/react": "^11.9.0",
+        "@emotion/styled": "^11.8.1",
+        "@mui/material": "^5.8.3",
         "@reduxjs/toolkit": "^1.7.2",
         "@types/node": "^17.0.21",
         "@types/react": "^17.0.39",
@@ -18,6 +20,7 @@
         "react-ace": "^9.5.0",
         "react-dom": "^17.0.2",
         "react-feather": "^2.0.9",
+        "react-range": "^1.8.12",
         "react-redux": "^7.2.6",
         "react-responsive": "^9.0.0-beta.6",
         "react-router": "^6.2.1",
