--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
         "@types/node": "^17.0.21",
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
+        "cross-spawn": "^7.0.3",
         "file-saver": "^2.0.5",
         "is-var-name": "^2.0.0",
-        "jszip": "^3.7.1",
+        "jszip": "^3.10.1",
+        "nanoid": "^5.0.3",
         "node-sass": "^7.0.1",
         "prettier": "2.5.1",
         "react": "^17.0.2",
